--- a/AnimeDownload/CSS/AnimeDownload.css
+++ b/AnimeDownload/CSS/AnimeDownload.css
@@ -71,7 +71,6 @@
     overflow-y: hidden;
     text-align: center;
 }
-
 .about {
     background-color: #cfcfcf;
     width: calc(100vw-1px);
@@ -93,7 +92,7 @@
     width: 85%;
     height: 80px;
     padding-top: 1vw;
-    font-size: 3em;
+    font-size: 30px;
 }
 
 .donateme {
@@ -102,8 +101,9 @@
     left: 90vw;
     right: 2vw;
     width: 8%;
-    font-size: 1.3em;
+    font-size: 15px;
 }
+
 
 .animeitem {
     border: 2px solid black;
