--- a/GameGuide/CSS/GameGuideMenu.css
+++ b/GameGuide/CSS/GameGuideMenu.css
@@ -103,7 +103,7 @@
     width: 85%;
     height: 80px;
     padding-top: 1vw;
-    font-size: 3em;
+    font-size: 30px;
 }
 
 .donateme {
@@ -112,5 +112,5 @@
     left: 90vw;
     right: 2vw;
     width: 8%;
-    font-size: 1.3em;
+    font-size: 15px;
 }
