--- a/AnimeDownload/CSS/AnimeDownload.css
+++ b/AnimeDownload/CSS/AnimeDownload.css
@@ -71,6 +71,7 @@
     overflow-y: hidden;
     text-align: center;
 }
+
 .about {
     background-color: #cfcfcf;
     width: calc(100vw-1px);
@@ -92,7 +93,7 @@
     width: 85%;
     height: 80px;
     padding-top: 1vw;
-    font-size: 30px;
+    font-size: 3em;
 }
 
 .donateme {
@@ -101,7 +102,7 @@
     left: 90vw;
     right: 2vw;
     width: 8%;
-    font-size: 15px;
+    font-size: 1.3em;
 }
 
 
