--- a/GameGuide/CSS/GameGuideMenu.css
+++ b/GameGuide/CSS/GameGuideMenu.css
@@ -22,13 +22,14 @@
 
 .content {
     width: calc(100vw - 1px);
+    height: calc(100% - 170px);
     border-top: 3px solid black;
     border-right: 3px solid black;
     border-left: 3px solid black;
     display: grid;
     grid-template-columns: auto auto auto auto;
-    grid-template:50px;
-    padding:50px;
+    grid-template: 50px;
+    padding: 50px;
 }
 
 .Button {
