--- a/index/CSS/index.css
+++ b/index/CSS/index.css
@@ -16,8 +16,8 @@
     bottom: 110px;
     left: 1vw;
     right: 1vw;
-    width: calc(100%-2vw);
-    height: calc(100%-110px);
+    width: calc(100% - 2vw);
+    height: calc(100% - 110px);
 }
 
 .animebutton {
@@ -102,7 +102,7 @@
 
 .about {
     background-color: #cfcfcf;
-    width: calc(100vw-1px);
+    width: calc(100vw - 1px);
     height: 100px;
     position: fixed;
     z-index: 2;
