--- a/GameGuide/CSS/EvilHunterTycoon.css
+++ b/GameGuide/CSS/EvilHunterTycoon.css
@@ -2,7 +2,7 @@
     background-color: #cfcfcf;
     font-size: 100%;
     overflow-x: hidden;
-    padding:0px;
+    padding: 0px;
 }
 
 .title {
@@ -19,6 +19,7 @@
     font-size: 45px;
     text-align: center;
 }
+
 a:link {
     cursor: pointer;
     color: blue;
@@ -37,23 +38,24 @@ a:hover {
     background-color: transparent;
     text-decoration: underline;
 }
+
 .intro {
     position: absolute;
-    width: calc(100% - 6px);
+    width: calc(100vw - 1px);
     left: 0px;
     right: 0px;
     top: 0px;
-    padding:0px;
+    padding: 0px;
     font-size: 40px;
     text-align: center;
 }
 
 .content {
     position: absolute;
-    width: 100%;
+    width: calc(100vw - 1px);
     left: 0px;
     right: 0px;
-    padding:0px;
+    padding: 0px;
     text-align: center;
     font-size: 50px;
 }
@@ -71,8 +73,9 @@ a:hover {
     top: 0px;
     z-index: 2;
     background-color: #cfcfcf;
-    padding:10px;
+    padding: 10px;
 }
+
 .navbarOff {
     text-align: center;
     position: fixed;
@@ -83,14 +86,16 @@ a:hover {
     overflow-y: hidden;
     z-index: 2;
 }
+
 .borderwhole {
     position: fixed;
-    width:calc(100% - 6px);
-    height:100%;
-    left:0px;
-    top:0px;
+    width: calc(100vw - 1px);
+    height: 100%;
+    left: 0px;
+    top: 0px;
     border: 3px solid black;
 }
+
 .about {
     background-color: #cfcfcf;
     width: calc(100vw - 1px);
@@ -125,7 +130,7 @@ a:hover {
 }
 
 .gameitem {
-    width: 300px;
+    width: 80%;
     height: auto;
     display: grid;
     grid-template-rows: auto auto;
@@ -136,23 +141,22 @@ a:hover {
     border: 2px solid black;
     width: auto;
     height: auto;
-    max-height: 154px;
 }
 
 .gameitembutton {
-    grid-template-columns: 150px 150px;
-    grid-template-rows: 150px auto;
     display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: auto auto;
     padding: 0px;
     text-align: right;
-    width: 303px;
-    height: 154px;
+    width: 100%;
+    height: 100%;
     text-decoration: none;
 }
 
 .gameitemimage {
-    width: 150px;
-    height: 150px;
+    width: 100%;
+    height: 100%;
     padding: 0px;
 }
 
@@ -165,10 +169,9 @@ a:hover {
     display: grid;
     align-content: center;
     text-align: left;
-    grid-template-columns: 80%;
-    width: 100%;
+    grid-template-columns: 100%;
+    width: 80vw;
     padding-left: 10%;
-    padding-right: 10%;
 }
 
 .stattable1 {
