--- a/GameGuide/CSS/EvilHunterTycoon.css
+++ b/GameGuide/CSS/EvilHunterTycoon.css
@@ -184,3 +184,22 @@ a:hover {
     border-left: 2px solid black;
     border-right: 2px solid black;
 }
+.mobileShow {
+    display: none;
+}
+
+@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+    .mobileShow {
+        display: inline;
+    }
+}
+
+.mobileHide {
+    display: inline;
+}
+
+@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+    .mobileHide {
+        display: none;
+    }
+}
