--- a/index/CSS/index.css
+++ b/index/CSS/index.css
@@ -5,10 +5,10 @@
 }
 /*-----------------------------------------------------------------------------------------*/
 .title {
+    position: fixed;
     background-color: white;
     width: calc(100% - 4px);
     height: 90px;
-    position: fixed;
     z-index: 2;
     top: 0%;
     left: 0px;
@@ -17,37 +17,72 @@
     overflow-x: hidden;
     overflow-y: auto;
 }
+
 .title1 {
     position: absolute;
     top: 0%;
     left: 1vw;
     padding-top: 10px;
 }
+
 .title2 {
     position: absolute;
     top: 0%;
-    left: calc(1vw + 500px);
+    left: calc(1vw + 650px);
     padding-top: 10px;
 }
 /*-----------------------------------------------------------------------------------------*/
 .content {
-    position: absolute;
+    position: relative;
     top: 120px;
     left: 2vw;
     width: calc(100% - 70px);
+    height: 100%;
 }
+
 .content1 {
-    position: absolute;
-    left: 450px;
+    position: relative;
+    margin-left: 13%;
     border-radius: 25px;
-    height: 420px;
-    width: 1000px;
+    width: 74%;
     background-color: white;
-    font-size:40px;
 }
 .content11 {
-    position: absolute;
-    margin-left: 20px;
-    margin-top: 20px;
+    position: relative;
+    font-size: 40px;
+    top: 20px;
+    left: 20px;
+}
+
+.content2 {
+    position: relative;
+    margin-left: 5%;
+    border-radius: 25px;
+    width: 90%;
+    background-color: white;
+    top: 80px;
+}
+.content21 {
+    position: relative;
+    font-size: 40px;
+    text-align:center;
+    top: 20px;
+    left: 20px;
+}
+.content22 {
+    position: relative;
+    display: inline-grid;
+    width: 90%;
+    left: 5%;
+    grid-template-columns: 48% 48%;
+    grid-gap: 70px;
+}
+.content221 {
+    position: relative;
+    display: inline-grid;
+    height: 500px;
+    border: 1px solid black;
+    border-radius: 10px;
+    grid-template-columns: 150px auto;
 }
 /*-----------------------------------------------------------------------------------------*/
